# intake-iq

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/data/nlp/calls_w_agent/: workers_comp_call_01.json  workers_comp_call_01.txt  workers_comp_call_01_transcribed.txt  workers_comp_call_02.json  workers_comp_call_02.txt  workers_comp_call_02_transcribed.txt  workers_comp_call_03.json  workers_comp_call_03.txt  workers_comp_call_03_transcribed.txt  workers_comp_call_04.json  workers_comp_call_04.txt  workers_comp_call_04_transcribed.txt  workers_comp_call_05.json  workers_comp_call_05.txt  workers_comp_call_05_transcribed.txt
backend/data/nlp/calls_wout_agent/: workers_comp_voicemail_01.json  workers_comp_voicemail_01.txt  workers_comp_voicemail_01_transcribed.txt  workers_comp_voicemail_02.json  workers_comp_voicemail_02.txt  workers_comp_voicemail_02_transcribed.txt  workers_comp_voicemail_03.json  workers_comp_voicemail_03.txt  workers_comp_voicemail_03_transcribed.txt  workers_comp_voicemail_04.json  workers_comp_voicemail_04.txt  workers_comp_voicemail_04_transcribed.txt  workers_comp_voicemail_05.json  workers_comp_voicemail_05.txt  workers_comp_voicemail_05_transcribed.txt
backend/data/nlp/scripts/: generate_tts_mp3.py  transcribe_mp3_files.py
backend/data/ocr/output/: form_dg_POL123456789_ocr.json  form_hw_POL987654321_ocr.json
backend/data/ocr/scripts/: extract_ocr_to_json.py
backend/src/intake_iq/: main.py  processors.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
(+3 files in other folders)
